2008-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m (-initWithData:...,
	-initWithURL:...): Basic implementation.
	* Source/NSAttributedString.m
	(NSMutableAttributedString-readFromData:...): Implement. 

2008-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m: Remove now unused override helper
	method. 
	* Headers/AppKit/NSDocument.h: Change to use NSUInteger and
	NSInteger. Add new 10.5 method
	* Source/NSDocument.m: Implement all Cocoa methods of this class
	and clean up the rest of the implementation. 
	
2008-12-25 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSMenuItem.h: Declare to implement interface
	NSValidatedUserInterfaceItem. 
	* Headers/AppKit/NSDocumentController.h: Change to use NSUInteger and
	NSInteger. 
	* Source/NSDocumentController.m: Implement all Cocoa methods of this
	class and clean up the rest of the implementation.
	Partly using code by Nikolaus Schaller <hns@computer.org>.

2008-12-21  Adam Fedor  <fedor@gnu.org>

	* Version 0.16.0

2008-12-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-draggingUpdated:): Avoid redundant call to
	-scrollPoint: when scrolling diagonally.
	* Source/NSTextView.m: Fix inconsistent naming of (private)
	NSTextStorage category.

	* Source/NSTextView_actions.m (-centerSelectionInVisibleArea):
	Replace the provisional implementation by a correct one.

	* Source/NSTextView_actions.m (-transpose): Fix implementation to
	really match the implementation of Emacs' transpose command.

2008-12-20 22:13-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Read objects/accessibility and oids
	maps if we are in a gui builder so that data is accessible.
	* Source/NSActionCell.m: Don't archive target/action if they
	have no values.
	* Source/NSMenu.m: Only archive as "_NSMainMenu" if it has
	no parent and is not owner by a popup.
	* Source/NSPopUpButtonCell.m: Archive the default menu item